fix small remaining shift in sidebar text

--- a/docs/website/src/css/custom.css
+++ b/docs/website/src/css/custom.css
@@ -40,7 +40,7 @@
   --docsearch-hit-color: #191937 !important;
   --ifm-footer-background-color: #E4E8F0;
 
-  --doc-sidebar-width: 325px !important;
+  --doc-sidebar-width: 340px !important;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
